base code for charts

--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -26,6 +26,7 @@ include ../blocks/calendar/calendar
 include ../blocks/card-mask/card-mask
 include ../blocks/category-filter/category-filter
 include ../blocks/characteristics-table/characteristics-table
+include ../blocks/chart/chart
 include ../blocks/client-info/client-info
 include ../blocks/close/close
 include ../blocks/composite-tab/composite-tab
