--- a/app/pages/deal-pass/deal-pass-chat.pug
+++ b/app/pages/deal-pass/deal-pass-chat.pug
@@ -10,7 +10,7 @@ block bodyClasses
 block header
   - var headerClass = ' is-login'
   - var pageClass = ' nd-page_chat'
-  - var isMap = true
+  - var isMap = false
   - var host = false
 
 block content
