--- a/app/pages/deal-pass/deal-pass-contracts.pug
+++ b/app/pages/deal-pass/deal-pass-contracts.pug
@@ -10,7 +10,7 @@ block bodyClasses
 block header
   - var headerClass = ' is-login'
   - var pageClass = ''
-  - var isMap = true
+  - var isMap = false
   - var host = false
 
 block content
