full code (js - html) for chart

--- a/app/blocks/chart/chart.pug
+++ b/app/blocks/chart/chart.pug
@@ -4,7 +4,7 @@ mixin chart(donut)
       +e.column
         +e.labels(data-chart-labels)
         +e.remaining
-          span(data-chart-remaining-period) 8 months
+          b(data-chart-remaining-period) 8 months
           | &nbsp;remaining
       +e.column
         +e.container(data-chart-target)
