--- a/app/blocks/chart/chart.scss
+++ b/app/blocks/chart/chart.scss
@@ -7,4 +7,241 @@
   &__container {
     width: 100%;
   }
+
+  &__column {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex: 1;
+
+    @include screen('sm', max, 2) {
+      flex: none;
+      width: 100%;
+      order: 2;
+    }
+
+    &:last-child {
+      align-items: flex-end;
+
+      @include screen('sm', max, 2) {
+        order: 1;
+      }
+    }
+  }
+
+  &__marker {
+    display: inline-block;
+    font-size: 0;
+    line-height: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(10, 1660);
+      height: pxtovw(10, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(10, 1366);
+      height: pxtovw(10, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(10, 960);
+      height: pxtovw(10, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(10, 375);
+      height: pxtovw(10, 375);
+    }
+
+    &:not(:last-child) {
+      margin-right: 13px;
+
+      @include screen('xlg', max, 2) {
+        margin-right: pxtovw(13, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-right: pxtovw(13, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-right: pxtovw(13, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-right: pxtovw(13, 375);
+      }
+    }
+  }
+
+  &__label {
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 16px;
+    line-height: 1;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(16, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(15, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(15, 375);
+    }
+  }
+
+  &__remaining {
+    display: block;
+    font-size: 16px;
+    line-height: 1;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(16, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(15, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(15, 375);
+      text-align: right;
+    }
+
+    b {
+      font-weight: 600;
+    }
+  }
+
+  &__period {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: baseline;
+    align-content: center;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    padding: 15px;
+    font-size: 13px;
+    line-height: 1;
+    font-weight: 400;
+
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(15, 1660);
+      font-size: pxtovw(13, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding: pxtovw(15, 1366);
+      font-size: pxtovw(13, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: pxtovw(15, 960);
+      font-size: pxtovw(13, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(15, 375);
+      font-size: pxtovw(13, 375);
+    }
+  }
+
+  &__progress {
+    font-size: 22px;
+    line-height: (26 / 22);
+    display: inline-block;
+    font-family: $font-stolzl;
+    letter-spacing: -.015em;
+    margin-right: (4 / 22) * 1em;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(22, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(22, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(22, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(22, 375);
+    }
+  }
+
+  &__total {
+    display: inline-block;
+    font-family: $font-stolzl;
+    letter-spacing: -.015em;
+  }
+
+  &__units {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    color: $nd-color-gray-text;
+  }
+
+  &_donut {
+    justify-content: space-between;
+
+    @include screen('sm', max, 2) {
+      flex-wrap: wrap;
+      align-items: flex-start;
+      align-content: flex-start;
+    }
+
+    #{$b} {
+      &__container {
+        position: relative;
+        width: 142px;
+        height: 142px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(142, 1660);
+          height: pxtovw(142, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(142, 1366);
+          height: pxtovw(142, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(142, 960);
+          height: pxtovw(142, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(142, 375);
+          height: pxtovw(142, 375);
+          margin: 0 auto;
+        }
+      }
+    }
+  }
 }
