--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -25,8 +25,8 @@ block content
           +nd-link(href="login.html") Spacepool - Login (login.html)
           +nd-link(href="search.html") Spacepool - Search (search.html)
           +nd-link(href="search-types.html") Spacepool - Search by offer type (search-types.html)
-          +nd-link(href="deal-pass.html") Spacepool - Deal Passpor Rent - Dashboard NOT READY (deal-pass.html)
-          +nd-link(href="deal-pass-chat.html") Spacepool - Deal Passpor Rent - Chat NOT READY (deal-pass-chat.html)
-          +nd-link(href="deal-pass-rs.html") Spacepool - Deal Passpor Rent - Rental Summary NOT READY (deal-pass-rs.html)
+          +nd-link(href="deal-pass.html") Spacepool - Deal Passpor Rent - Dashboard (deal-pass.html)
+          +nd-link(href="deal-pass-rs.html") Spacepool - Deal Passpor Rent - Rental Summary (deal-pass-rs.html)
           +nd-link(href="deal-pass-contracts.html") Spacepool - Deal Passpor Rent - Contracts (deal-pass-contracts.html)
           +nd-link(href="deal-pass-statements.html") Spacepool - Deal Passpor Rent - Statements (deal-pass-statements.html)
+          //- +nd-link(href="deal-pass-chat.html") Spacepool - Deal Passpor Rent - Chat NOT READY (deal-pass-chat.html)
