--- a/app/blocks/chart/donut.scss
+++ b/app/blocks/chart/donut.scss
@@ -1,8 +1,38 @@
 .donut {
+  @keyframes fill-in {
+    from {
+      opacity: 0;
+      stroke-dasharray: 0 418;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fade-in-long {
+    0% {
+      opacity: 0;
+    }
+
+    80% {
+      opacity: 0;
+    }
+  }
+
   width: 100%;
   height: 100%;
 
   &__today circle {
     display: inline-block;
+    animation-name: fade-in-long;
+    animation-fill-mode: forwards;
+    animation-duration: 1.25s;
+  }
+
+  &__segment {
+    animation-name: fill-in;
+    animation-fill-mode: forwards;
+    animation-duration: 1s;
   }
 }
