--- a/app/components/dashboard/dashboard.scss
+++ b/app/components/dashboard/dashboard.scss
@@ -155,15 +155,29 @@
       }
 
       &_main {
-        @include grid-column(1, 4);
+        @include grid-column(1, 3);
         @include grid-row(1, 2);
 
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
+        padding-bottom: 38px;
+
+        @include screen('xlg', max, 2) {
+          padding-bottom: pxtovw(38, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          padding-bottom: pxtovw(38, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          padding-bottom: pxtovw(21, 960);
+        }
 
         @include screen('sm', max, 2) {
           @include grid-column(1, 2);
 
+          padding-bottom: pxtovw(53, 375);
           border-bottom-left-radius: pxtovw(3, 375);
           border-bottom-right-radius: pxtovw(3, 375);
         }
@@ -176,6 +190,19 @@
         position: relative;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
+        padding-right: 44px;
+
+        @include screen('xlg', max, 2) {
+          padding-right: pxtovw(34, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          padding-right: pxtovw(34, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          padding-right: pxtovw(22, 960);
+        }
 
         @include screen('sm', max, 2) {
           @include grid-column(1, 2);
@@ -183,43 +210,29 @@
 
           border-top-left-radius: pxtovw(3, 375);
           border-top-right-radius: pxtovw(3, 375);
-        }
-
-        &:not(:last-child) {
-          &::before {
-            @include pseudo;
-
-            width: 50px;
-            height: 100%;
-            top: 0;
-            left: 100%;
-            background-color: $nd-color-basic-light;
-
-            @include screen('xlg', max, 2) {
-              width: pxtovw(50, 1660);
-            }
-
-            @include screen('lg', max, 2) {
-              width: pxtovw(20, 1366);
-            }
-
-            @include screen('md', max, 2) {
-              width: pxtovw(5, 960);
-            }
-
-            @include screen('sm', max, 2) {
-              display: none;
-            }
-          }
+          padding-right: pxtovw(18, 375);
         }
       }
 
       &_times {
-        @include grid-column(3, 4);
+        @include grid-column(2, 3);
         @include grid-row(2, 3);
 
         border-top-left-radius: 0;
         border-top-right-radius: 0;
+        padding-left: 44px;
+
+        @include screen('xlg', max, 2) {
+          padding-left: pxtovw(34, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          padding-left: pxtovw(34, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          padding-left: pxtovw(22, 960);
+        }
 
         @include screen('sm', max, 2) {
           @include grid-column(1, 2);
@@ -227,6 +240,7 @@
 
           border-top-left-radius: pxtovw(3, 375);
           border-top-right-radius: pxtovw(3, 375);
+          padding-left: pxtovw(18, 375);
         }
       }
     }
@@ -281,28 +295,20 @@
 
   &_rs {
     @include display-grid;
-    @include grid-template-columns(1fr 50px 1fr);
+    @include grid-template-columns(1fr 1fr);
     @include grid-template-rows(auto auto);
 
     margin-top: 0;
 
-    @include screen('xlg', max, 2) {
-      @include grid-template-columns(1fr pxtovw(50, 1660) 1fr);
-    }
-
-    @include screen('lg', max, 2) {
-      @include grid-template-columns(1fr pxtovw(20, 1366) 1fr);
-    }
-
     @include screen('md', max, 2) {
-      @include grid-template-columns(1fr pxtovw(5, 960) 1fr);
+      margin-top: pxtovw(17, 960);
     }
 
     @include screen('sm', max, 2) {
       @include grid-template-columns(100%);
       @include grid-template-rows(auto auto auto);
 
-      margin-top: pxtovw(-20, 375);
+      margin-top: pxtovw(5, 375);
     }
   }
 
