--- a/app/pages/deal-pass/deal-pass.pug
+++ b/app/pages/deal-pass/deal-pass.pug
@@ -120,7 +120,7 @@ block content
               +nd-link._next._next_angle.__link_fz14._fw600(href="#") View all statements
           +board._shadow.__board_rent._rent_overview
             +board-title Contract overview
-            +chart(true)._donut.__chart(data-chart-data='{"type": "donut", "dates": {"startDate": "2020-05-30", "endDate": "2021-05-30", "noticeDate": "2021-02-28"}, "colors": {"progress" : "#0085ff", "base": "#d4dfe2", "notice": "#fd9603", "overlay": "#2af787"}, "labels": {"progress": "Progress", "base": "Remaining", "notice": "Notice period"}, "remainFormat": "months"}')
+            +chart(true)._donut.__chart_donut(data-chart-data='{"type": "donut", "dates": {"startDate": "2020-02-27", "endDate": "2021-02-27", "noticeDate": "2020-12-28"}, "colors": {"progress" : "#0085ff", "base": "#d4dfe2", "notice": "#fd9603", "overlay": "#2af787"}, "labels": {"progress": "Progress", "base": "Remaining", "notice": "Notice period"}, "remainFormat": "months"}')
 
 block panels
 
