--- a/app/blocks/button/nd-button.scss
+++ b/app/blocks/button/nd-button.scss
@@ -225,6 +225,10 @@
     }
   }
 
+  &_fw400 {
+    font-weight: 400;
+  }
+
   &_fz17 {
     font-size: 17px;
     line-height: (21 / 17);
@@ -297,6 +301,13 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(15, 375);
+    }
+  }
+
+  &_sm-fz12 {
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(12, 375);
+      line-height: (18 / 12);
     }
   }
 
@@ -374,6 +385,13 @@
     @include screen('sm', max, 2) {
       border-radius: pxtovw(16, 375);
       height: pxtovw(32, 375);
+    }
+
+    &_sm22 {
+      @include screen('sm', max, 2) {
+        border-radius: pxtovw(16, 375);
+        height: pxtovw(22, 375);
+      }
     }
   }
 
