--- a/app/blocks/media/media.scss
+++ b/app/blocks/media/media.scss
@@ -1,15 +1,19 @@
 .media {
   $b: &;
 
+  position: relative;
   display: block;
+  padding-top: 63.3%;
   overflow: hidden;
+  box-sizing: border-box;
 
   &__image {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     display: block;
     width: 100%;
-    padding-top: 63.3%;
-    overflow: hidden;
+    height: 100%;
     font-size: 0;
     line-height: 0;
 
