--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -46,6 +46,26 @@
       @include screen('sm', max, 2) {
         margin-top: pxtovw(28, 375);
       }
+
+      #{$b}_view & {
+        margin-top: 38px;
+
+        @include screen('xlg', max, 2) {
+          margin-top: pxtovw(38, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-top: pxtovw(26, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-top: pxtovw(26, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-top: pxtovw(26, 375);
+        }
+      }
     }
 
     &_small {
@@ -347,6 +367,27 @@
       @include screen('sm', max, 2) {
         margin-top: pxtovw(53, 375);
       }
+    }
+  }
+
+  &__btn-link {
+    font-size: 16px;
+    line-height: 1;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(16, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(15, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(15, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(15, 375);
     }
   }
 
