--- a/app/pages/deal-pass/deal-pass.pug
+++ b/app/pages/deal-pass/deal-pass.pug
@@ -76,13 +76,14 @@ block content
                   tr
                     td Signed on
                     td 24 April 2020
-          +board._pt22._shadow.__board_rent._rent_chat
+          +board._pt22._fx._shadow.__board_rent._rent_chat
             +board-header
               +board-title Chat
               +nd-short-profile-data({ava: {img: 'assets/images/nd/user-avatar-2.jpg', class: '_sz34'}, marker: '2'})._nd.__person.is-new(href="#")
             +e.chat
-              +e.TIME.chat-time Few minutes ago
-              +e.chat-message Well ok! I think this might work
+              +e.chat-info
+                +e.TIME.chat-time Few minutes ago
+                +e.chat-message Well ok! I think this might work
               +nd-button-icon('', {icon: 'nd-bubble', notext: true})._pad10._h32.__chat-button(href="#")
           +board._shadow.__board_rent._rent_state
             +board-title Statements
