--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -31,4 +31,4 @@ block content
           +nd-link(href="deal-pass-statements.html") Spacepool - Deal Passpor Rent - Statements (deal-pass-statements.html)
           +nd-link(href="deal-pass-chat.html") Spacepool - Deal Passpor Rent - Chat (deal-pass-chat.html)
           +nd-link(href="deal-pass-viewing-chat.html") Spacepool - Deal Passpor Viewing - Chat (deal-pass-viewing-chat.html)
-          +nd-link(href="deal-pass-viewing.html") Spacepool - Deal Passpor Viewing - Dashboard NOT READY (deal-pass-viewing.html)
+          +nd-link(href="deal-pass-viewing.html") Spacepool - Deal Passpor Viewing - Dashboard (deal-pass-viewing.html)
