--- a/app/pages/ui-kit/nd-ui-kit.pug
+++ b/app/pages/ui-kit/nd-ui-kit.pug
@@ -299,7 +299,7 @@ block content
           +nd-grid-col({xl: 4})
             +nd-side-navigation(sideDealRent, 'Chat')
           +nd-grid-col({xl: 4})
-            +nd-side-navigation(sideDealView, 'Chat')
+            +nd-side-navigation(sideDealView, 'Chat')._view
           +nd-grid-col({xl: 4})
             +nd-side-navigation(sideProfile, 'Account settings')._profile
 
