--- a/app/blocks/table/nd-table.scss
+++ b/app/blocks/table/nd-table.scss
@@ -1,4 +1,6 @@
 .nd-table {
+  $b: &;
+
   display: table;
   border-collapse: collapse;
   width: 100%;
@@ -331,6 +333,203 @@
 
         @include screen('sm', max, 2) {
           font-size: pxtovw(16, 375);
+        }
+      }
+    }
+  }
+
+  &_features {
+    width: 100%;
+
+    tbody {
+      width: 100%;
+    }
+
+    tr {
+      width: 100%;
+    }
+
+    th, td {
+      font-size: 16px;
+      line-height: 1.2;
+      padding-top: 12px;
+      padding-bottom: 11px;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(16, 1660);
+        padding-top: pxtovw(12, 1660);
+        padding-bottom: pxtovw(11, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        font-size: pxtovw(15, 1366);
+        padding-top: pxtovw(13, 1366);
+        padding-bottom: pxtovw(12, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        font-size: pxtovw(16, 960);
+        padding-top: pxtovw(12, 960);
+        padding-bottom: pxtovw(11, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(13, 375);
+        padding-top: pxtovw(10, 375);
+        padding-bottom: pxtovw(8, 375);
+      }
+
+      &:first-child {
+        text-align: center;
+        vertical-align: middle;
+        width: 32px;
+        font-size: 0;
+        line-height: 0;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(32, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(32, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(32, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(16, 375);
+        }
+      }
+
+      &:nth-child(2) {
+        width: 267px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(267, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(131, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(362, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          display: none;
+        }
+      }
+
+      &:last-child {
+        text-align: left;
+      }
+
+      &:not(:first-child) {
+        padding-left: 8px;
+        box-sizing: border-box;
+
+        @include screen('xlg', max, 2) {
+          padding-left: pxtovw(8, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          padding-left: pxtovw(8, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          padding-left: pxtovw(8, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          padding-left: pxtovw(8, 375);
+        }
+      }
+    }
+
+    tr {
+      @include screen('sm', max, 2) {
+        border-bottom: none;
+      }
+
+      &:last-child {
+        border-bottom: none;
+
+        td:first-child {
+          @include screen('sm', max, 2) {
+            vertical-align: top;
+          }
+        }
+      }
+    }
+
+    .nd-box {
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(12, 1660);
+        height: pxtovw(12, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(12, 1366);
+        height: pxtovw(12, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(12, 960);
+        height: pxtovw(12, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(10, 375);
+        height: pxtovw(10, 375);
+      }
+    }
+
+    #{$b} {
+      &__image {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 22px;
+        height: 18px;
+        font-size: 0;
+        line-height: 0;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(22, 1660);
+          height: pxtovw(18, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          width: pxtovw(22, 1366);
+          height: pxtovw(18, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          width: pxtovw(22, 960);
+          height: pxtovw(18, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          width: pxtovw(16, 375);
+          height: pxtovw(16, 375);
+        }
+
+        img {
+          display: inline-block;
+          font-size: 0;
+          line-height: 0;
+          vertical-align: middle;
+          margin: 0 auto;
+          flex: 1;
+          max-width: 100%;
+          max-height: 100%;
         }
       }
     }
